# monolith

./: .gitignore  Dockerfile.backend  Dockerfile.ui  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.sh
desktop/: Cargo.toml  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  api.rs  app.rs  main.rs  styles.css  tauri_api.ts  vault.rs  worker.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  vault_registry.rs
desktop/src/components/: FileTree.tsx  QuickSwitcher.tsx  VaultManager.tsx
desktop/src/views/: DriftInspector.tsx  Editor.tsx  GraphView.tsx  SourcesView.tsx  drift.rs  evidence.rs  graph.rs  mod.rs  projects.rs  sources.rs  statements.rs
monolith/: __init__.py  cli.py  models.py  security.py
monolith/core/: assert_.py  drift.py  graph.py  ingest.py  mark.py  pin.py  vault.py
monolith/mcp/: server.py  tools.py
monolith/server/: deps.py  main.py  run.py
monolith/server/api/: drift.py  evidence.py  graph.py  projects.py  refs.py  sources.py  statements.py
monolith/store/: db.py  fs.py
tests/: test_pipeline.py
ui/: package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  api.ts  main.tsx  tokens.css
ui/src/views/: DriftInspector.tsx  GraphView.tsx  ProjectsView.tsx  SourceViewer.tsx  StatementEditor.tsx
