[package]
name = "monolith-desktop"
version = "0.1.0"
edition = "2021"
description = "Monolith – vault-first knowledge desktop"

[lib]
name = "monolith_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "monolith-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell  = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc             = "0.2"

[profile.release]
strip   = true
opt-level = 3
lto     = "thin"
